[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-refresher"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["token_refresher*"]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]
